--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <!-- just change the corresponding herf value -->
 
                                     <!-- CV part. &nbsp; means we add a space. It is equal to press "Space key" on your keyboard -->
-                                    <a href="Chuanyang-Zheng_HKBU_CV.pdf" target="_blank">
+                                    <a href="/research/Chuanyang-Zheng_HKBU_CV.pdf" target="_blank">
                                         <i class="fas fa-download"></i> CV</a>&nbsp;&nbsp;&nbsp;
 
 
