--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             </div>
 
                             <div class="mdl-cell mdl-cell--8-col">
-                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.1 - Now</h2>
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.1 - 2020.5</h2>
                                 <div class="mdl-card__supporting-text">
                                     COMP4055 Medical Images and Its Applications Course Report
                                     <br>
@@ -243,6 +243,30 @@
                             </div>
                         </div>
                         <!-- Third research experience finishes -->
+
+
+
+
+
+
+                        <div class="mdl-grid mdl-cell--12-col">
+                            <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+
+                                <!-- logo for research Laboratory -->
+                                <img class="article-image"
+                                     src="https://www.comp.hkbu.edu.hk/v1/images/winter/home_01.png"
+                                     border="0" alt="">
+                            </div>
+
+                            <div class="mdl-cell mdl-cell--8-col">
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.1 - Now</h2>
+                                <div class="mdl-card__supporting-text">
+                                    Working On Object Detection
+                                    <br>
+                                    –Idea: Each pixel should have different box ratio. Given a feature map, we use sigmoid to get anchor ratio after 1x1 convolution.
+                                </div>
+                            </div>
+                        </div>
 
                         <!-- if you need to add another research experience, just copy the first experience description and change the corresponding value -->
 
