--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
                                     <br>
                                     –	CycleGAN only cycles once. According to Squeeze Theorem, we add additional cycles by regards cycle-consistent images as real images. There are two advantages compared to the original CycleGAN.  First, according to Squeeze Theorem, the cycle-consistent should be much closer to the original real images. Second, we can get more images as input because we regard cycle-consistent images as real images
                                     <br>
-<!--                                    - Original CycleGAN:  Mean pixel accuracy: 0.593948 Mean class accuracy: 0.187309 Mean class IoU: 0.143469-->
-<!--                                    <br>-->
-<!--                                    -Ours:                Mean pixel accuracy: 0.549950 Mean class accuracy: 0.197015 Mean class IoU: 0.153379-->
+                                    - Original CycleGAN(Discriminator Loss is MSE):  Mean pixel accuracy: 0.593948 Mean class accuracy: 0.187309 Mean class IoU: 0.143469
+                                    <br>
+                                    -Ours:                Mean pixel accuracy: 0.549950 Mean class accuracy: 0.197015 Mean class IoU: 0.153379
                                     <br>
                                     <a href="/research/Project_COMP4015_Final.pdf">[Report]</a>
                                 </div>
