--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     <br>
                                     His research interests include computer vision, data mining and security,
                                     particularly
-                                    focusing object detection.(Last Update: 16 June, 2020)</p>
+                                    focusing object detection.(Last Update: 17 June, 2020)</p>
                                 
                                 <span style="font-size:16px">
 
@@ -287,7 +287,18 @@
                     <div class="mdl-card__supporting-text" style="width:100%">
                         <ul class="mdl-list">
 
-                            <!-- first news begins -->
+
+
+                            <!-- begins -->
+                            <li class="mdl-list__item news-text">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="fas fa-bullhorn"></i>
+                                    I am invited to CUHK Engineering Summer Camp. See You In 6 July!
+                                </span>
+                            </li>
+                            <!-- finishes -->
+
+                            <!-- begins -->
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
@@ -296,14 +307,16 @@
                                         Lan</a> &nbsp;  in Multi-View &nbsp;
                                 </span>
                             </li>
+                            <!-- finishes -->
 
+                            <!-- begins -->
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
                                     &nbsp;(15 October, 2019) Participate in Sensetime Technology Day.
                                 </span>
                             </li>
-                            <!-- first news finishes -->
+                            <!-- finishes -->
 
                             <!-- if you need to add another news, just copy the first news code and change the corresponding value -->
 
