--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    I am invited to CUHK Engineering Summer Camp. See You In 6 July!
+                                    (15 June) I am invited to CUHK Engineering Summer Camp. See You In 6 July!
                                 </span>
                             </li>
                             <!-- finishes -->
