--- a/index.html
+++ b/index.html
@@ -287,13 +287,19 @@
                     <div class="mdl-card__supporting-text" style="width:100%">
                         <ul class="mdl-list">
 
+                            <li class="mdl-list__item news-text">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="fas fa-bullhorn"></i>
+                                    (22 July, 2020) One WISE 2020 paper is accpeted!. <a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">[Initial Proposal]</a>
+                                </span>
+                            </li>
 
 
                             <!-- begins -->
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    (15 June) I am invited to CUHK Engineering Summer Camp. See You In 6 July!
+                                    (15 June, 2020) I am invited to CUHK Engineering Summer Camp. See You In 6 July!
                                 </span>
                             </li>
                             <!-- finishes -->
