--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    (22 July, 2020) One WISE 2020 paper is accpeted!. <a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">[Initial Proposal]</a>
+                                    (22 July, 2020) One WISE 2020 paper is accepted!. <a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">[Initial Proposal]</a>
                                 </span>
                             </li>
 
