--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                             <div class="mdl-card__supporting-text no-left-padding paper-info">
                                 <p>
                                     <!-- author name. You can use <b>Zheng</b> to highlit the name -->
-                                    Yulong Pei, Cong Liu, Chuanyang Zheng, and Long Cheng4
+                                    Yulong Pei, Cong Liu, <b>Chuanyang Zheng</b>, and Long Cheng4
                                     <br>
                                     <i>WISE 2020</i>
                                 </p>
