--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card">
                         <div class="mdl-cell mdl-cell--3-col mdl-cell--12-col-tablet">
                             <!-- an image for publication -->
-                            <img class="article-image" src="/WISE 2020.png" border="0" alt="">
+                            <img class="article-image" src="/images/WISE 2020.png" border="0" alt="">
                         </div>
                         <div class="mdl-cell mdl-cell--9-col">
                             <h2 class="mdl-card__title-text paper-title">GNonnegative Residual Matrix Factorization for
