--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <img class="article-image" src="/images/WISE%202020.PNG" border="0" alt="">
                     </div>
                     <div class="mdl-cell mdl-cell--9-col">
-                        <h2 class="mdl-card__title-text paper-title">GNonnegative Residual Matrix Factorization for
+                        <h2 class="mdl-card__title-text paper-title">Nonnegative Residual Matrix Factorization for
                             Community Detection
                         </h2>
                         <div class="mdl-card__supporting-text no-left-padding paper-info">
