--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="mdl-card__supporting-text no-left-padding">
 
                             <!-- write description for yourself -->
-                            <p>Chuanyang Zheng is a Year 3 undergraduate in Hong Kong Baptist University. Now he
+                            <p>Chuanyang Zheng is a Year 4 undergraduate in Hong Kong Baptist University. Now he
                                 works with Professor
 
                                 <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
@@ -349,13 +349,13 @@
                         <div class="mdl-card__supporting-text no-left-padding paper-info">
                             <p>
                                 <!-- author name. You can use <b>Zheng</b> to highlit the name -->
-                                Yulong Pei, Cong Liu, <b>Chuanyang Zheng</b>, and Long Cheng4
+                                Yulong Pei, Cong Liu, <b>Chuanyang Zheng</b>, and Long Cheng
                                 <br>
                                 <i>WISE 2020</i>
                             </p>
 
                             <!-- pdf link for the publication(if necessary) -->
-                            <span>[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8753618">PDF</a>]
+                            <span>[<a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">PDF</a>]
                                 </span>
                         </div>
                     </div>
