--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                                 <br>
                                 His research interests include computer vision, data mining and security,
                                 particularly
-                                focusing object detection.(Last Update: 19 October, 2020)</p>
+                                focusing object detection.(Last Update: 18 March 2021)</p>
 
                             <span style="font-size:16px">
 
                                     <!-- just change the corresponding herf value -->
 
                                 <!-- CV part. &nbsp; means we add a space. It is equal to press "Space key" on your keyboard -->
-                                    <a href="Chuanyang-Zheng_HKBU_CV.pdf" target="_blank">
+                                    <a href="Chuanyang-Zheng_HKBU_CV-19-Oct-2020.pdf" target="_blank">
                                         <i class="fas fa-download"></i> CV</a>&nbsp;&nbsp;&nbsp;
 
 
@@ -262,10 +262,28 @@
                         </div>
 
                         <div class="mdl-cell mdl-cell--8-col">
-                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.5 - Now</h2>
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.5 - 2020.10</h2>
                             <div class="mdl-card__supporting-text">
                                 Working On Object Detection
                                 <br>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mdl-grid mdl-cell--12-col">
+                        <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+
+                            <!-- logo for research Laboratory -->
+                            <img class="article-image"
+                                 src="https://www.comp.hkbu.edu.hk/v1/images/winter/home_01.png"
+                                 border="0" alt="">
+                        </div>
+
+                        <div class="mdl-cell mdl-cell--8-col">
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.10 - 2020.1</h2>
+                            <div class="mdl-card__supporting-text">
+                                CNN based knowledge graph embedding.
+                                <br><a href="/research/RepeatE.pdf">[Report]</a>
                             </div>
                         </div>
                     </div>
@@ -286,6 +304,13 @@
 
                 <div class="mdl-card__supporting-text" style="width:100%">
                     <ul class="mdl-list">
+
+                        <li class="mdl-list__item news-text">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="fas fa-bullhorn"></i>
+                                    (18 March, 2021) I will Go To CUHK as a Mphil and Work with Professor Dou Qi. <a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">[Paper]</a>
+                                </span>
+                        </li>
 
                         <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
