--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <small>郑传阳</small>
                     </span>
                     <span class="mdl-layout__subtitle">HKBU email:17251311@life.hkbu.edu.hk</span>
+                    <span class="mdl-layout__subtitle">Personal email:cyzhengme@gmail.com</span>
 
                 </span>
         </div>
