--- a/index.html
+++ b/index.html
@@ -415,29 +415,29 @@
                     <!-- if you need to add another publication, just copy the first publication code and change the corresponding value. -->
 
                 </div>
-
-
-
-                <!-- award part -->
-                <div id="award" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-                    <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Award</h2>
-                    </div>
-                    <ul>
-                        <li>Summer Research Scholarship 2020</li>
-                        <li>C.V. Starr Scholarship 2020</li>
-                        <li>Outstanding Student Scholarship 2019</li>
-                        <li>Summer Research Scholarship 2019</li>
-                        <li>Nominated to Visit McGill University <b> (top 1%,100K HKD)</b> 2019</li>
-                        <li>Undergraduate Scholarship in Computer Science 2018</li>
-                        <li>President's Honour Roll 2017 semester 2-Now </li>
-                        <li>Dean’s List 2017 semester 1 </li>
-                    </ul>
-                </div>
-
-
-
             </div>
+
+            <!-- award part -->
+            <div id="award" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                <div class="mdl-card__title">
+                    <h2 class="mdl-card__title-text">Award</h2>
+                </div>
+                <ul>
+                    <li>Summer Research Scholarship 2020</li>
+                    <li>C.V. Starr Scholarship 2020</li>
+                    <li>Outstanding Student Scholarship 2019</li>
+                    <li>Summer Research Scholarship 2019</li>
+                    <li>Nominated to Visit McGill University <b> (top 1%,100K HKD)</b> 2019</li>
+                    <li>Undergraduate Scholarship in Computer Science 2018</li>
+                    <li>President's Honour Roll 2017 semester 2-Now </li>
+                    <li>Dean’s List 2017 semester 1 </li>
+                </ul>
+            </div>
+
+            <a href="http://www.clustrmaps.com/map/Chuanyang-zheng.github.io" title="Visit tracker for Chuanyang-zheng.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=hJkN5roHIiNTl4nt25FlWYWttuh73o4WKGyq973o5A8" /></a>
+
+
+
     </main>
 </div>
 <script src="assets/js/material.min.js"></script>
