--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    (18 March, 2021) I will Go To CUHK as a Mphil and Work with Professor Dou Qi. <a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">[Paper]</a>
+                                    (18 March, 2021) I will Go To CUHK as a Mphil and Work with Professor Dou Qi.
                                 </span>
                         </li>
 
