--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <br>
                                 His research interests include computer vision, data mining and security,
                                 particularly
-                                focusing object detection.(Last Update: 18 March 2021)</p>
+                                focusing object detection.(Last Update: 29 May 2021)</p>
 
                             <span style="font-size:16px">
 
@@ -281,10 +281,27 @@
                         </div>
 
                         <div class="mdl-cell mdl-cell--8-col">
-                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.10 - 2020.1</h2>
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.10 - 2021.1</h2>
                             <div class="mdl-card__supporting-text">
                                 CNN based knowledge graph embedding.
                                 <br><a href="/research/RepeatE.pdf">[Report]</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mdl-grid mdl-cell--12-col">
+                        <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+
+                            <!-- logo for research Laboratory -->
+                            <img class="article-image"
+                                 src="https://www.ha.org.hk/visitor/v3/common/images/ha_logo.gif"
+                                 border="0" alt="">
+                        </div>
+
+                        <div class="mdl-cell mdl-cell--8-col">
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2021.4 - present</h2>
+                            <div class="mdl-card__supporting-text">
+                                Medical Image Processing
                             </div>
                         </div>
                     </div>
