--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
                             <!-- logo for research Laboratory -->
                             <img class="article-image"
-                                 src="https://www.ha.org.hk/visitor/v3/common/images/ha_logo.gif"
+                                 src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4b/Hospital_Authority_logo.svg/440px-Hospital_Authority_logo.svg.png"
                                  border="0" alt="">
                         </div>
 
