--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <br>
                                 His research interests include computer vision, data mining and security,
                                 particularly
-                                focusing object detection.(Last Update: 29 May 2021)</p>
+                                focusing object detection.(Last Update: 8 Aug 2021)</p>
 
                             <span style="font-size:16px">
 
@@ -156,6 +156,16 @@
                                 <br> Hong Kong Baptist University
                             </div>
                         </div>
+
+                        <div class="mdl-cell mdl-cell--8-col">
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2021 - 2025(expected)
+                            </h2>
+                            <div class="mdl-card__supporting-text">
+                                P.HD in Computer Science
+                                <br> The Chinese University Of Hong Kong
+                            </div>
+                        </div>
+
                     </div>
                     <!-- first degree finishes -->
 
