--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                  alt="">
                         </div>
                         <div class="mdl-cell mdl-cell--8-col">
-                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2017 - 2021(expected)
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2017 - 2021
                             </h2>
                             <div class="mdl-card__supporting-text">
                                 B.SC in Computer Science
@@ -157,17 +157,27 @@
                             </div>
                         </div>
 
+                    </div>
+                    <!-- first degree finishes -->
+
+
+                    <div class="mdl-grid mdl-cell--12-col">
+                        <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+
+                            <!-- put your University logo here, just change the src value. -->
+                            <img class="article-image" src="https://upload.wikimedia.org/wikipedia/en/thumb/8/87/CUHK.svg/1024px-CUHK.svg.png" border="0"
+                                 alt="">
+                        </div>
                         <div class="mdl-cell mdl-cell--8-col">
                             <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2021 - 2025(expected)
                             </h2>
                             <div class="mdl-card__supporting-text">
-                                P.HD in Computer Science
+                                P.HD in Computer Science And Engineering
                                 <br> The Chinese University Of Hong Kong
                             </div>
                         </div>
 
                     </div>
-                    <!-- first degree finishes -->
 
                     <!-- if you need to add another degree, just copy the first degree description code and change the corresponding value -->
 
