--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="mdl-layout__title">Chuanyang Zheng
                         <small>郑传阳</small>
                     </span>
-                    <span class="mdl-layout__subtitle">HKBU email:17251311@life.hkbu.edu.hk</span>
+                    <span class="mdl-layout__subtitle">CUHK email:1155165858@link.cuhk.edu.hk</span>
                     <span class="mdl-layout__subtitle">Personal email:cyzhengme@gmail.com</span>
 
                 </span>
@@ -95,18 +95,11 @@
                         <div class="mdl-card__supporting-text no-left-padding">
 
                             <!-- write description for yourself -->
-                            <p>Chuanyang Zheng is a Year 4 undergraduate in Hong Kong Baptist University. Now he
+                            <p>Chuanyang Zheng is a first year PhD in The Chinese University Of Hong Kong. Now he
                                 works with Professor
 
-                                <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
-                                    Lan</a> and
-
-                                <a href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi
-                                    Yuen</a> at Pattern Recognition and Machine Learning Laboratory.
-                                <br>
-                                His research interests include computer vision, data mining and security,
-                                particularly
-                                focusing object detection.(Last Update: 8 Aug 2021)</p>
+                                <a href="http://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a>
+                                His research interests focus on surgical AI. (Last Update: 10 Aug 2021)</p>
 
                             <span style="font-size:16px">
 
