--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- I choose grey-pink because some images are suitable for other choices. To find more choices, you can go yo https://getmdl.io/customize/index.html# and find your favoured color. Just replace the follorwing link. -->
     <link rel="stylesheet" href="layout/material.grey-pink.min.css" />
 
+
     <!-- not change the link -->
     <link rel="stylesheet" href="layout/styles.css" />
 </head>
@@ -339,7 +340,7 @@
                         <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    (18 March, 2021) I will Go To CUHK as a Mphil and Work with Professor Dou Qi.
+                                    (18 March, 2021) I will Go To CUHK as a Ph.D. and Work with Professor Dou Qi.
                                 </span>
                         </li>
 
