--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
                         <div class="mdl-card__supporting-text no-left-padding">
 
                             <!-- write description for yourself -->
-                            <p>Chuanyang Zheng is a first year PhD in The Chinese University Of Hong Kong. Now he
-                                works with Professor
+                            <p>Chuanyang Zheng is a first year PhD in The Chinese University Of Hong Kong. Now he is supervised by Professor <a href="http://www.cse.cuhk.edu.hk/~qdou/"> Qi Dou</a>  and co-supervised by Professor <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-meng-mei-ling-helen/"> Helen Meng</a>
 
-                                <a href="http://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a>
-                                His research interests focus on surgical AI. (Last Update: 10 Aug 2021)</p>
+
+                                (Last Update: 15 Jan 2022)</p>
 
                             <span style="font-size:16px">
 
@@ -313,7 +312,7 @@
                         </div>
 
                         <div class="mdl-cell mdl-cell--8-col">
-                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2021.4 - present</h2>
+                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2021.4 - 2021.6</h2>
                             <div class="mdl-card__supporting-text">
                                 Medical Image Processing
                             </div>
