--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="mdl-card__supporting-text no-left-padding">
 
                             <!-- write description for yourself -->
-                            <p>Chuanyang Zheng is a first year PhD in The Chinese University Of Hong Kong. Now he is supervised by Professor <a href="http://www.cse.cuhk.edu.hk/~qdou/"> Qi Dou</a>  and co-supervised by Professor <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-meng-mei-ling-helen/"> Helen Meng</a>
+                            <p>I am a Ph.D. student in <a href="https://www.cse.cuhk.edu.hk/">CSE</a>, <a href="https://www.cuhk.edu.hk/chinese/index.html"> The Chinese University of Hong Kong</a>, supervised by Prof. <a href="http://www.cse.cuhk.edu.hk/~qdou/"> Qi Dou</a>  and Prof. <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-meng-mei-ling-helen/"> Helen Meng</a>. Previously, I received the Bachelor of Science degree from <a href="https://www.comp.hkbu.edu.hk/v1/">Computer Science Department</a>, <a href="https://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a> in 2021, under the supervison from Prof. <a href="https://www.comp.hkbu.edu.hk/v1/?page=profile&id=pcyuen"> YUEN, Pong Chi</a>. During my undergraduate, I was very lucky to do research advised by Prof. <a href="https://marswhu.github.io/index.html">Mang Ye</a> and <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan Lan</a>
 
 
                                 (Last Update: 15 Jan 2022)</p>
@@ -453,6 +453,7 @@
                     <h2 class="mdl-card__title-text">Award</h2>
                 </div>
                 <ul>
+                    <li>Hong Kong Baptist University Alumni Association - Alumnus Edmund Cheung Shang Kang Scholarship</li>
                     <li>Summer Research Scholarship 2020</li>
                     <li>C.V. Starr Scholarship 2020</li>
                     <li>Outstanding Student Scholarship 2019</li>
