--- a/index.html
+++ b/index.html
@@ -387,12 +387,60 @@
             </div>
 
             <!-- publication part -->
+
+
             <div id="publication" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                 <div class="mdl-card__title">
                     <h2 class="mdl-card__title-text">Publication</h2>
                 </div>
 
                 <!-- first publication begin -->
+
+                <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card">
+                    <div class="mdl-cell mdl-cell--3-col mdl-cell--12-col-tablet">
+                        <!-- an image for publication -->
+                        <img class="article-image" src="/images/2022-Annual-Meeting-Hybrid-no-deadline.jpg" border="0" alt="">
+                    </div>
+                    <div class="mdl-cell mdl-cell--9-col">
+                        <h2 class="mdl-card__title-text paper-title">Predicting Knee Osteoarthritis Progression with a interpretable Deep Learning Approach on Magnetic Resonance Imaging: data from the Osteoarthritis Initiative
+                        </h2>
+                        <div class="mdl-card__supporting-text no-left-padding paper-info">
+                            <p>
+                                <!-- author name. You can use <b>Zheng</b> to highlit the name -->
+                               Jiaping Hu, Chuanyang Zheng, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Qi Dou, and Xiaodong Zhang
+                                <br>
+                                <i>ISMRM 2022</i>
+                            </p>
+
+                            <!-- pdf link for the publication(if necessary) -->
+                            <span>[<a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">PDF</a>]
+                                </span>
+                        </div>
+                    </div>
+
+
+                <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card">
+                    <div class="mdl-cell mdl-cell--3-col mdl-cell--12-col-tablet">
+                        <!-- an image for publication -->
+                        <img class="article-image" src="/images/2022-Annual-Meeting-Hybrid-no-deadline.jpg" border="0" alt="">
+                    </div>
+                    <div class="mdl-cell mdl-cell--9-col">
+                        <h2 class="mdl-card__title-text paper-title">Can infrapatellar fat pad predict the incidence of knee osteoarthritis by using deep learning based on MRI? Data from osteoarthritis initiative
+                        </h2>
+                        <div class="mdl-card__supporting-text no-left-padding paper-info">
+                            <p>
+                                <!-- author name. You can use <b>Zheng</b> to highlit the name -->
+                                Keyan Yu, Chuanyang Zheng, Jiaping Hu, Lijie Zhong, Qi Dou, Xiaodong Zhang
+                                <br>
+                                <i>ISMRM 2022</i>
+                            </p>
+
+                            <!-- pdf link for the publication(if necessary) -->
+                            <span>[<a href="/research/WISE-2020-Nonnegative Residual Matrix Factorization for Community Detection.pdf">PDF</a>]
+                                </span>
+                        </div>
+                    </div>
+
                 <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card">
                     <div class="mdl-cell mdl-cell--3-col mdl-cell--12-col-tablet">
                         <!-- an image for publication -->
