--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                 <!-- author name. You can use <b>Zheng</b> to highlit the name -->
                                Jiaping Hu, Chuanyang Zheng, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Qi Dou, and Xiaodong Zhang
                                 <br>
-                                <i>ISMRM 2022</i>
+                                <i>ISMRM 2022 (Oral)</i>
                             </p>
 
                             <!-- pdf link for the publication(if necessary) -->
