--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <!-- the titile of the page -->
-    <title>Chuanyang Zheng-HKBU</title>
+    <title>Chuanyang Zheng-CUHK</title>
 
 
     <!-- not change the following three links -->
@@ -99,7 +99,7 @@
                             <p>I am a Ph.D. student in <a href="https://www.cse.cuhk.edu.hk/">CSE</a>, <a href="https://www.cuhk.edu.hk/chinese/index.html"> The Chinese University of Hong Kong</a>, supervised by Prof. <a href="http://www.cse.cuhk.edu.hk/~qdou/"> Qi Dou</a>  and Prof. <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-meng-mei-ling-helen/"> Helen Meng</a>. Previously, I received the Bachelor of Science degree from <a href="https://www.comp.hkbu.edu.hk/v1/">Computer Science Department</a>, <a href="https://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a> in 2021, under the supervison from Prof. <a href="https://www.comp.hkbu.edu.hk/v1/?page=profile&id=pcyuen"> YUEN, Pong Chi</a>. During my undergraduate, I was very lucky to do research advised by Prof. <a href="https://marswhu.github.io/index.html">Mang Ye</a> and <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan Lan</a>
 
 
-                                (Last Update: 26 Mar 2022)</p>
+                                (Last Update: 28 April 2022)</p>
 
                             <span style="font-size:16px">
 
