--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <p>I am a Ph.D. student in <a href="https://www.cse.cuhk.edu.hk/">CSE</a>, <a href="https://www.cuhk.edu.hk/chinese/index.html"> The Chinese University of Hong Kong</a>, supervised by Prof. <a href="http://www.cse.cuhk.edu.hk/~qdou/"> Qi Dou</a>  and Prof. <a href="https://www.se.cuhk.edu.hk/people/academic-staff/prof-meng-mei-ling-helen/"> Helen Meng</a>. Previously, I received the Bachelor of Science degree from <a href="https://www.comp.hkbu.edu.hk/v1/">Computer Science Department</a>, <a href="https://www.hkbu.edu.hk/eng/main/index.jsp">Hong Kong Baptist University</a> in 2021, under the supervison from Prof. <a href="https://www.comp.hkbu.edu.hk/v1/?page=profile&id=pcyuen"> YUEN, Pong Chi</a>. During my undergraduate, I was very lucky to do research advised by Prof. <a href="https://marswhu.github.io/index.html">Mang Ye</a> and <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan Lan</a>
 
 
-                                (Last Update: 28 April 2022)</p>
+                                (Last Update: 30 April 2022)</p>
 
                             <span style="font-size:16px">
 
@@ -339,6 +339,13 @@
                         <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
+                                    (1 February, 2021) Two co-first-author papers are accepted to ISMRM 2022 as Oral presentation. Thanks for Keyan Yu, Jiaping Hu, Lijie Zhong !
+                                </span>
+                        </li>
+
+                        <li class="mdl-list__item news-text">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="fas fa-bullhorn"></i>
                                     (18 March, 2021) I will Go To CUHK as a Ph.D. and Work with Professor Dou Qi.
                                 </span>
                         </li>
@@ -409,7 +416,7 @@
                                 <!-- author name. You can use <b>Zheng</b> to highlit the name -->
                                <b>Jiaping Hu*</b>, <b>Chuanyang Zheng*</b>, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Qi Dou, and Xiaodong Zhang
                                 <br>
-                                <i>ISMRM 2022</i>
+                                <i>ISMRM 2022 (Oral)</i>
                             </p>
 
                             <!-- pdf link for the publication(if necessary) -->
