--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                 <!-- author name. You can use <b>Zheng</b> to highlit the name -->
                                <b>Jiaping Hu*</b>, <b>Chuanyang Zheng*</b>, Lijie Zhong, Keyan Yu, Yanjun Chen, Zhao Wang, Qi Dou, and Xiaodong Zhang
                                 <br>
-                                <i>ISMRM 2022 (Oral)</i>
+                                <i><a href="ISMRM 2022-3102.html">ISMRM 2022 (Oral)</a></i>
                             </p>
 
                             <!-- pdf link for the publication(if necessary) -->
@@ -439,7 +439,7 @@
                                 <!-- author name. You can use <b>Zheng</b> to highlit the name -->
                                 <b>Keyan Yu*</b>, <b>Chuanyang Zheng*</b>, Jiaping Hu, Lijie Zhong, Qi Dou, Xiaodong Zhang
                                 <br>
-                                <i><a href="/research/ISMRM 2022-3102.html">ISMRM 2022 (Oral)</a></i>
+                                <i><a href="ISMRM 2022-4621.html">ISMRM 2022 (Oral)</a></i>
                             </p>
 
                             <!-- pdf link for the publication(if necessary) -->
