--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="span2 bs-docs-sidebar">
                     <hr class="hidden-phone">
                     <div class="text-center hidden-phone">
-                        <img src="assets/images/Chuanyang-Zheng.jpg" alt="photo" class="logo-image" width="300" height="300" style="margin: 0px 20px">
+                        <img src="assets/images/Chuanyang-Zheng.jpg" alt="photo" class="logo-image" width="300" height="450" style="margin: 0px 20px">
                         <!-- <img src="assets/imgs/enze.png" alt="photo" class="logo-image"> -->
                     </div>
                 </div>
@@ -88,6 +88,21 @@
     (* indicates equal contribution) <br><br>
 
 <!--    <strong>Selected Papers</strong>-->
+    <div class="media">
+        <a class="pull-left" href="#"><img class="media-object" src="assets/images/PHP_model.png" width="150px" height="120px"></a>
+        <div class="media-body">
+            <p class="media-heading">
+                <a href="#"></a>
+            </p>
+            <h4>
+                <strong>Progressive-Hint Prompting Improves Reasoning in Large Language Models</strong>
+            </h4>
+            <strong>Chuanyang Zheng</strong>, Zhengying Liu, Enze Xie, Zhenguo Li, Yu Li
+            <br>
+            <i>Preprint</i>
+            <a href="https://arxiv.org/abs/2304.09797">[Paper]</a> <a href="https://github.com/chuanyang-Zheng/Progressive-Hint">[Code]</a> <a href="https://paperswithcode.com/sota/arithmetic-reasoning-on-gsm8k">[GSM8K SOTA]</a> <a href="https://paperswithcode.com/sota/math-word-problem-solving-on-svamp">[SVAMP SOTA]</a>
+        </div>
+    </div>
 
     <div class="media">
         <a class="pull-left" href="#"><img class="media-object" src="assets/images/ISMRM%20Progression.png" width="150px" height="120px"></a>
@@ -191,7 +206,7 @@
 <div style="float:left; text-align:left">Summer Research Scholarship 2019</div>
 <div style="float:right; text-align:right">2019</div> <br />
 
-<div style="float:left; text-align:left">Nominated to Visit McGill University <b> (top 1%,100K HKD)</div>
+<div style="float:left; text-align:left">Nominated to Visit McGill University (top 1%,100K HKD)</div>
 <div style="float:right; text-align:right">2019</div> <br />
 
 <div style="float:left; text-align:left">Undergraduate Scholarship in Computer Science 2018</div>
